Реализовать функцию бронирования: - добавить сущность booking - создать и реализовать dto, controller, dao, service - обновить схему базы данных